package captcha

import "github.com/zhsyourai/teddy-backend/captcha/proto"

func validateGetImageReq(req *proto.GetImageReq) error {
	return nil
}

func validateGetRandomReq(req *proto.GetRandomReq) error {
	return nil
}

func validateGetVoiceReq(req *proto.GetVoiceReq) error {
	return nil
}

func validateVerifyReq(req *proto.VerifyReq) error {
	return nil
}
